Replace inline styles with external stylesheet

--- a/index.html
+++ b/index.html
@@ -5,100 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Newborn Medications & Vaccinations – Patient Teaching</title>
   <meta name="description" content="Simple interactive app for patient teaching on newborn medications and vaccinations: Hepatitis B vaccine, Vitamin K, and Erythromycin eye ointment. Includes info pages, quiz, and a checklist." />
-  <style>
-    :root{
-      /* Friendly, bright pastel theme */
-      --bg:#fffaf6;            /* warm cream */
-      --card:#ffffff;          /* white cards */
-      --muted:#5f6b85;         /* muted text */
-      --text:#1e2a44;          /* primary text (dark navy) */
-      --accent:#3a86ff;        /* baby-blue accent */
-      --accent-2:#7ddcc6;      /* mint accent */
-      --danger:#ff6b6b;        /* soft coral */
-      --ok:#1dbd6b;            /* fresh green */
-      --ring: 0 0 0 3px rgba(58,134,255,.25);
-      --radius:18px;
-      --stroke:#e6ebf4;        /* light border */
-      --soft:#f6f9ff;          /* soft panel bg */
-    }
-    *{box-sizing:border-box}
-    html,body{height:100%}
-    body{
-      margin:0; font-family:ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, Inter, Helvetica, Arial, sans-serif;
-      color:var(--text);
-      background: radial-gradient(1200px 600px at 10% -10%, #eef6ff 0%, transparent 60%),
-                  radial-gradient(1000px 500px at 90% 0%, #fff0f0 0%, transparent 55%),
-                  var(--bg);
-      line-height:1.55;
-    }
-    .wrap{max-width:1024px;margin:0 auto;padding:28px}
-    header{
-      display:flex; gap:16px; align-items:center; justify-content:space-between; margin-bottom:20px;
-    }
-    .brand{display:flex;align-items:center;gap:12px}
-    .logo{width:44px;height:44px;border-radius:14px;background:
-      radial-gradient(circle at 30% 35%, var(--accent), transparent 60%),
-      radial-gradient(circle at 75% 70%, var(--accent-2), transparent 55%), #ffffff;
-      border:1px solid var(--stroke); box-shadow:0 6px 18px rgba(31,42,68,.08)}
-    h1{font-size:clamp(20px,2.6vw,28px);margin:0}
-    nav{display:flex;gap:8px;flex-wrap:wrap}
-    .tabbtn{
-      background:#ffffff; color:var(--text); border:1px solid var(--stroke); padding:10px 14px; border-radius:12px; cursor:pointer;
-      transition:.2s transform, .2s background, .2s box-shadow, .2s border-color;
-    }
-    .tabbtn[aria-current="page"], .tabbtn:hover{background:var(--soft); border-color:#d6def0; box-shadow:var(--ring)}
-
-    .grid{display:grid;grid-template-columns:repeat(12,1fr); gap:16px}
-    .card{
-      grid-column:span 12; background:linear-gradient(180deg, #ffffff, #fbfdff); border:1px solid var(--stroke); border-radius:var(--radius); padding:20px;
-      box-shadow:0 10px 30px rgba(31,42,68,.06);
-    }
-    @media (min-width: 840px){ .card.half{grid-column:span 6} }
-    h2{margin:6px 0 12px 0; font-size:22px}
-    h3{margin:14px 0 6px 0}
-    p{color:#33405f}
-    ul{margin:8px 0 8px 20px}
-    .muted{color:var(--muted)}
-    .badge{display:inline-block; padding:4px 8px; border:1px solid var(--stroke); border-radius:999px; font-size:12px; color:#55627e; background:#f7fbff}
-
-    .accordion{border-top:1px solid var(--stroke); margin-top:12px}
-    details{border-bottom:1px solid var(--stroke); padding:10px 0}
-    summary{cursor:pointer; list-style:none}
-    summary::marker{display:none}
-    summary span{font-weight:700}
-
-    .pill{display:inline-flex; align-items:center; gap:8px; padding:8px 12px; background:#f5fbff; border:1px solid var(--stroke); border-radius:999px; font-size:13px}
-
-    .notice{border:1px dashed #ffd7b8; border-radius:14px; padding:12px; background:#fff6ee; font-size:14px}
-    .success{border-color:#bfead4; background:#effcf6}
-    .danger{border-color:#ffd1d1; background:#fff2f2}
-
-    .btn{display:inline-flex; align-items:center; gap:8px; border:1px solid var(--stroke); background:#ffffff; color:var(--text); padding:10px 14px; border-radius:12px; cursor:pointer; transition:.2s background,.2s transform, .2s box-shadow}
-    .btn:hover{background:var(--soft); box-shadow:var(--ring)}
-    .btn:active{transform:scale(.98)}
-
-    .quiz{display:flex; flex-direction:column; gap:14px}
-    .q{border:1px solid var(--stroke); border-radius:14px; padding:14px; background:#ffffff}
-    .q h4{margin:0 0 8px 0}
-    .choices{display:flex; flex-direction:column; gap:8px}
-    .choices label{display:flex; gap:10px; align-items:flex-start; border:1px solid var(--stroke); padding:10px; border-radius:10px; background:#f9fbff; cursor:pointer}
-
-    .results{margin-top:16px; padding:14px; border-radius:12px; border:1px solid var(--stroke); background:#f7fbff}
-    .correct{color:var(--ok); font-weight:700}
-    .incorrect{color:var(--danger); font-weight:700}
-
-    .checklist{display:flex; flex-direction:column; gap:10px}
-    .checkrow{display:flex; align-items:center; gap:10px; justify-content:space-between; border:1px solid var(--stroke); background:#ffffff; padding:10px; border-radius:12px}
-    .checkrow label{display:flex; align-items:center; gap:10px}
-    .checkrow input[type="text"], .checkrow input[type="datetime-local"], textarea{
-      width:100%; background:#f7f9fd; border:1px solid var(--stroke); color:var(--text); border-radius:10px; padding:10px
-    }
-    textarea{min-height:100px}
-
-    footer{margin-top:28px; color:var(--muted); font-size:13px}
-    code.kbd{padding:.2em .5em; background:#f5f7ff; border:1px solid var(--stroke); border-radius:6px; font-family:ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace}
-    .sr-only{position:absolute;width:1px;height:1px;padding:0;margin:-1px;overflow:hidden;clip:rect(0,0,0,0);white-space:nowrap;border:0}
-  </style>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <div class="wrap">
@@ -360,145 +267,6 @@
     </footer>
   </div>
 
-  <script>
-    // --- Simple tab router (hash-based) ---
-    const tabs = ["info", "quiz", "checklist"];
-    const tabButtons = document.querySelectorAll('.tabbtn');
-
-    function showTab(name){
-      tabs.forEach(t => {
-        const sec = document.getElementById(`tab-${t}`);
-        const btn = document.querySelector(`.tabbtn[data-tab="${t}"]`);
-        if(t===name){
-          sec.removeAttribute('hidden');
-          btn.setAttribute('aria-current','page');
-        } else {
-          sec.setAttribute('hidden','');
-          btn.removeAttribute('aria-current');
-        }
-      });
-      // persist last tab
-      localStorage.setItem('nv-tab', name);
-    }
-
-    // nav clicks
-    tabButtons.forEach(btn => btn.addEventListener('click', () => {
-      const name = btn.getAttribute('data-tab');
-      location.hash = `#${name}`;
-      showTab(name);
-    }));
-
-    // on load
-    (function(){
-      const fromHash = location.hash.replace('#','');
-      const saved = localStorage.getItem('nv-tab');
-      const start = tabs.includes(fromHash) ? fromHash : (tabs.includes(saved) ? saved : 'info');
-      showTab(start);
-    })();
-
-    // --- Quiz logic ---
-    const quizForm = document.getElementById('quiz-form');
-    const quizResults = document.getElementById('quiz-results');
-
-    function gradeQuiz(){
-      const questions = Array.from(document.querySelectorAll('.q'));
-      let correct = 0;
-      const explanations = [];
-
-      questions.forEach((box, i) => {
-        const answer = box.getAttribute('data-answer');
-        const name = `q${i+1}`;
-        const chosen = quizForm.querySelector(`input[name="${name}"]:checked`);
-        const exp = box.querySelector('.explanation');
-        const isCorrect = chosen && chosen.value === answer;
-        if(isCorrect) correct++;
-        exp.hidden = false; // reveal explanations after submit
-        explanations.push({
-          number: i+1,
-          status: isCorrect ? 'correct' : 'incorrect',
-          correct: answer
-        });
-      });
-
-      const total = questions.length;
-      const pct = Math.round((correct/total)*100);
-      quizResults.hidden = false;
-      quizResults.innerHTML = `
-        <div><strong>Score:</strong> ${correct}/${total} (${pct}%)</div>
-        <div style="margin-top:8px">${explanations.map(e => `Q${e.number}: <span class="${e.status}">${e.status}</span>`).join(' • ')}</div>
-      `;
-      window.scrollTo({top: quizResults.getBoundingClientRect().top + window.scrollY - 120, behavior:'smooth'});
-    }
-
-    quizForm?.addEventListener('submit', e => { e.preventDefault(); gradeQuiz(); });
-    document.getElementById('resetQuiz')?.addEventListener('click', () => {
-      quizForm.reset();
-      document.querySelectorAll('.explanation').forEach(exp => exp.hidden = true);
-      quizResults.hidden = true; quizResults.textContent = '';
-    });
-
-    // --- Checklist persistence ---
-    const STORAGE_KEY = 'nv-checklist-v1';
-
-    function loadChecklist(){
-      try{
-        const saved = JSON.parse(localStorage.getItem(STORAGE_KEY) || '{}');
-        document.querySelectorAll('[data-key]').forEach(el => {
-          const key = el.getAttribute('data-key');
-          if(el.type === 'checkbox') el.checked = !!saved[key];
-          else if(el.type === 'datetime-local' || el.tagName === 'TEXTAREA' || el.type === 'text') el.value = saved[key] || '';
-        });
-      }catch(err){ console.warn('No saved checklist', err); }
-    }
-
-    function saveChecklist(){
-      const data = {};
-      document.querySelectorAll('[data-key]').forEach(el => {
-        const key = el.getAttribute('data-key');
-        if(el.type === 'checkbox') data[key] = el.checked;
-        else if(el.type === 'datetime-local' || el.tagName === 'TEXTAREA' || el.type === 'text') data[key] = el.value;
-      });
-      localStorage.setItem(STORAGE_KEY, JSON.stringify(data));
-      const s = document.getElementById('saveStatus');
-      s.textContent = 'Saved to this browser.';
-      setTimeout(()=> s.textContent = '', 2500);
-      return data;
-    }
-
-    function downloadChecklist(){
-      const data = saveChecklist();
-      const blob = new Blob([
-        'Newborn Medications & Vaccinations Checklist\n',
-        '-----------------------------------------\n',
-        `Info reviewed: ${data.infoReviewed ? 'Yes' : 'No'}\n`,
-        `Questions answered: ${data.questionsAnswered ? 'Yes' : 'No'}\n`,
-        `Consent documented: ${data.consentDocumented ? 'Yes' : 'No'}\n`,
-        `HepB given: ${data.hepbGiven ? 'Yes' : 'No'} ${data.hepbDateTime? '('+data.hepbDateTime+')':''}\n`,
-        `Vitamin K given: ${data.vitkGiven ? 'Yes' : 'No'} ${data.vitkDateTime? '('+data.vitkDateTime+')':''}\n`,
-        `Erythromycin applied: ${data.eryGiven ? 'Yes' : 'No'} ${data.eryDateTime? '('+data.eryDateTime+')':''}\n`,
-        `Notes: ${data.notes || ''}\n`
-      ], {type:'text/plain'});
-      const url = URL.createObjectURL(blob);
-      const a = document.createElement('a');
-      a.href = url; a.download = 'newborn-meds-checklist.txt';
-      document.body.appendChild(a); a.click();
-      setTimeout(()=>{ URL.revokeObjectURL(url); a.remove(); }, 0);
-    }
-
-    document.getElementById('saveChecklist')?.addEventListener('click', saveChecklist);
-    document.getElementById('downloadChecklist')?.addEventListener('click', downloadChecklist);
-    document.getElementById('clearChecklist')?.addEventListener('click', () => {
-      if(confirm('Clear saved checklist from this browser?')){
-        localStorage.removeItem(STORAGE_KEY);
-        document.querySelectorAll('[data-key]').forEach(el => {
-          if(el.type === 'checkbox') el.checked = false;
-          else if(el.type === 'datetime-local' || el.tagName === 'TEXTAREA' || el.type === 'text') el.value = '';
-        });
-        const s = document.getElementById('saveStatus'); s.textContent = 'Cleared.'; setTimeout(()=> s.textContent = '', 2000);
-      }
-    });
-
-    loadChecklist();
-  </script>
+  <script src="script.js" defer></script>
 </body>
 </html>
