Replace nav buttons with anchor links for tabs

--- a/index.html
+++ b/index.html
@@ -17,11 +17,27 @@
           <div class="muted" style="font-size:13px">Patient teaching • Hep B • Vitamin K • Erythromycin ointment</div>
         </div>
       </div>
-      <nav aria-label="Primary">
-        <button class="tabbtn" data-tab="info" aria-current="page">Information</button>
-        <button class="tabbtn" data-tab="quiz">Quiz</button>
-        <button class="tabbtn" data-tab="checklist">Checklist</button>
-      </nav>
+     <nav aria-label="Primary">
+  <a class="tabbtn" href="#tab-info" aria-current="page">Information</a>
+  <a class="tabbtn" href="#tab-quiz">Quiz</a>
+  <a class="tabbtn" href="#tab-checklist">Checklist</a>
+</nav>
+
+<!-- INFO PAGE -->
+<section id="tab-info" role="region" aria-labelledby="info" class="grid default">
+  ...
+</section>
+
+<!-- QUIZ PAGE -->
+<section id="tab-quiz" role="region" aria-labelledby="quiz" class="grid">
+  ...
+</section>
+
+<!-- CHECKLIST PAGE -->
+<section id="tab-checklist" role="region" aria-labelledby="checklist" class="grid">
+  ...
+</section>
+
     </header>
 
     <!-- INFO PAGE -->
