--- a/index.html
+++ b/index.html
@@ -1,128 +1,213 @@
-// Newborn Meds & Vaccines – App logic (tabs are CSS-driven; JS handles quiz & checklist)
-(function(){
-  // --- Quiz logic ---
-  function initQuiz(){
-    const quizForm = document.getElementById('quiz-form');
-    const quizResults = document.getElementById('quiz-results');
-    if(!quizForm) return;
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Newborn Medications & Vaccinations – Patient Teaching</title>
+  <meta name="description" content="Simple interactive app for patient teaching on newborn medications and vaccinations: Hepatitis B vaccine, Vitamin K, and Erythromycin eye ointment. Includes info pages, quiz, and a checklist." />
+  <link rel="stylesheet" href="style.css" />
+</head>
+<body>
+  <div class="wrap">
+    <header>
+      <div class="brand">
+        <div class="logo" aria-hidden="true"></div>
+        <div>
+          <h1>Newborn Medications & Vaccinations</h1>
+          <div class="muted" style="font-size:13px">Patient teaching • Hep B • Vitamin K • Erythromycin ointment</div>
+        </div>
+      </div>
+      <nav aria-label="Primary">
+        <a class="tabbtn" href="#tab-info" aria-current="page">Information</a>
+        <a class="tabbtn" href="#tab-quiz">Quiz</a>
+        <a class="tabbtn" href="#tab-checklist">Checklist</a>
+      </nav>
+    </header>
 
-    function gradeQuiz(){
-      const questions = Array.from(document.querySelectorAll('.q'));
-      let correct = 0;
-      const explanations = [];
+    <!-- INFO PAGE -->
+    <section id="tab-info" role="region" aria-labelledby="info" class="grid default">
+      <article class="card">
+        <h2>Welcome</h2>
+        <p>
+          This mini-app provides clear, parent-friendly information about three standard newborn preventive treatments often recommended shortly after birth. Use the tabs above to read about each item, take a short quiz to check understanding, and complete a simple checklist you can save.
+        </p>
+        <div class="notice">
+          <strong>Important:</strong> This content is educational and does not replace advice from your healthcare team. Your clinician can tailor recommendations to your baby’s needs.
+        </div>
+      </article>
 
-      questions.forEach((box, i) => {
-        const answer = box.getAttribute('data-answer');
-        const name = `q${i+1}`;
-        const chosen = quizForm.querySelector(`input[name="${name}"]:checked`);
-        const exp = box.querySelector('.explanation');
-        const isCorrect = chosen && chosen.value === answer;
-        if(isCorrect) correct++;
-        if(exp) exp.hidden = false; // reveal explanations after submit
-        explanations.push({ number: i+1, status: isCorrect ? 'correct' : 'incorrect' });
-      });
+      <article class="card half" id="info-hepb">
+        <div class="pill" aria-label="Tag"><span>Vaccine</span> • Hepatitis B</div>
+        <h2>Hepatitis B (HepB) vaccine</h2>
+        <p>
+          The HepB vaccine helps protect your baby from <em>hepatitis B</em>, a virus that can cause lifelong liver disease and cancer. The first dose is typically given within 24 hours of birth, with follow-up doses during infancy per the routine schedule.
+        </p>
+        <div class="accordion">
+          <details>
+            <summary><span>Why it’s recommended</span></summary>
+            <ul>
+              <li>Newborns infected at birth have a high risk of chronic hepatitis B.</li>
+              <li>Vaccinating early provides protection while follow-up testing of caregivers is confirmed.</li>
+            </ul>
+          </details>
+          <details>
+            <summary><span>Safety & side effects</span></summary>
+            <ul>
+              <li>Common: soreness at the injection site, mild fever, fussiness.</li>
+              <li>Serious reactions are very rare. Tell your care team about prior severe vaccine reactions.</li>
+            </ul>
+          </details>
+          <details>
+            <summary><span>What to expect</span></summary>
+            <ul>
+              <li>Given as a shot in the thigh.</li>
+              <li>May be combined with other routine infant vaccines later.</li>
+            </ul>
+          </details>
+        </div>
+      </article>
 
-      const total = questions.length;
-      const pct = Math.round((correct/total)*100);
-      if(quizResults){
-        quizResults.hidden = false;
-        quizResults.innerHTML = `
-          <div><strong>Score:</strong> ${correct}/${total} (${pct}%)</div>
-          <div style="margin-top:8px">${explanations.map(e => `Q${e.number}: <span class="${e.status}">${e.status}</span>`).join(' • ')}</div>
-        `;
-        window.scrollTo({top: quizResults.getBoundingClientRect().top + window.scrollY - 120, behavior:'smooth'});
-      }
-    }
+      <article class="card half" id="info-vitk">
+        <div class="pill"><span>Medication</span> • Vitamin K injection</div>
+        <h2>Vitamin K</h2>
+        <p>
+          Babies are born with low vitamin K levels. A one-time Vitamin K shot helps prevent <em>Vitamin K Deficiency Bleeding (VKDB)</em>, which can cause dangerous internal bleeding in the first weeks of life.
+        </p>
+        <div class="accordion">
+          <details>
+            <summary><span>Why it’s recommended</span></summary>
+            <ul>
+              <li>Prevents early and late VKDB, including bleeding in the brain.</li>
+              <li>Oral drops are less reliable; the injection provides dependable protection.</li>
+            </ul>
+          </details>
+          <details>
+            <summary><span>Safety & side effects</span></summary>
+            <ul>
+              <li>Common: temporary soreness or redness at the injection site.</li>
+              <li>Allergic reactions are rare; inform your care team about prior medication reactions.</li>
+            </ul>
+          </details>
+          <details>
+            <summary><span>What to expect</span></summary>
+            <ul>
+              <li>Single shot in the thigh soon after birth.</li>
+              <li>Works quickly; no ongoing doses needed for most infants.</li>
+            </ul>
+          </details>
+        </div>
+      </article>
 
-    quizForm.addEventListener('submit', e => { e.preventDefault(); gradeQuiz(); });
-    const resetBtn = document.getElementById('resetQuiz');
-    if(resetBtn){
-      resetBtn.addEventListener('click', () => {
-        quizForm.reset();
-        document.querySelectorAll('.explanation').forEach(exp => exp.hidden = true);
-        if(quizResults){ quizResults.hidden = true; quizResults.textContent = ''; }
-      });
-    }
-  }
+      <article class="card half" id="info-erythro">
+        <div class="pill"><span>Medication</span> • Erythromycin eye ointment</div>
+        <h2>Erythromycin eye ointment</h2>
+        <p>
+          A small ribbon of antibiotic ointment is placed in each eye after birth to help prevent eye infections that can be acquired during delivery.
+        </p>
+        <div class="accordion">
+          <details>
+            <summary><span>Why it’s recommended</span></summary>
+            <ul>
+              <li>Helps prevent serious eye infections that could affect vision.</li>
+              <li>Often required by local regulations; ask your care team about your hospital’s policy.</li>
+            </ul>
+          </details>
+          <details>
+            <summary><span>Safety & side effects</span></summary>
+            <ul>
+              <li>Temporary blurred vision, mild eye redness, or irritation can occur and usually resolves on its own.</li>
+            </ul>
+          </details>
+          <details>
+            <summary><span>What to expect</span></summary>
+            <ul>
+              <li>Applied once to each eye soon after birth. No needles are involved.</li>
+              <li>Excess ointment may be gently wiped after a minute, per hospital instructions.</li>
+            </ul>
+          </details>
+        </div>
+      </article>
 
-  // --- Checklist persistence ---
-  function initChecklist(){
-    const STORAGE_KEY = 'nv-checklist-v1';
-    const saveBtn = document.getElementById('saveChecklist');
-    const dlBtn = document.getElementById('downloadChecklist');
-    const clearBtn = document.getElementById('clearChecklist');
+      <article class="card half">
+        <h3>Questions to ask your care team</h3>
+        <ul>
+          <li>Are there any reasons my baby should delay or avoid any of these treatments?</li>
+          <li>What side effects should I watch for, and whom should I contact if they occur?</li>
+          <li>How will these be documented in my baby’s medical record and discharge papers?</li>
+        </ul>
+        <p class="muted">Use the checklist tab to record discussion and decisions.</p>
+      </article>
+    </section>
 
-    function loadChecklist(){
-      try{
-        const saved = JSON.parse(localStorage.getItem(STORAGE_KEY) || '{}');
-        document.querySelectorAll('[data-key]').forEach(el => {
-          const key = el.getAttribute('data-key');
-          if(el.type === 'checkbox') el.checked = !!saved[key];
-          else if(el.type === 'datetime-local' || el.tagName === 'TEXTAREA' || el.type === 'text') el.value = saved[key] || '';
-        });
-      }catch(err){ console.warn('No saved checklist', err); }
-    }
+    <!-- QUIZ PAGE -->
+    <section id="tab-quiz" role="region" aria-labelledby="quiz" class="grid">
+      <article class="card">
+        <h2>Quick Knowledge Check</h2>
+        <p class="muted">Select the best answer for each question, then submit to see your score and explanations.</p>
+        <form id="quiz-form" class="quiz" novalidate>
 
-    function saveChecklist(){
-      const data = {};
-      document.querySelectorAll('[data-key]').forEach(el => {
-        const key = el.getAttribute('data-key');
-        if(el.type === 'checkbox') data[key] = el.checked;
-        else if(el.type === 'datetime-local' || el.tagName === 'TEXTAREA' || el.type === 'text') data[key] = el.value;
-      });
-      localStorage.setItem(STORAGE_KEY, JSON.stringify(data));
-      const s = document.getElementById('saveStatus');
-      if(s){ s.textContent = 'Saved to this browser.'; setTimeout(()=> s.textContent = '', 2500); }
-      return data;
-    }
+          <div class="q" data-answer="a">
+            <h4>1) The first dose of the Hepatitis B vaccine is typically given:</h4>
+            <div class="choices">
+              <label><input type="radio" name="q1" value="a"> Within 24 hours of birth</label>
+              <label><input type="radio" name="q1" value="b"> At 6 months only</label>
+              <label><input type="radio" name="q1" value="c"> At 4 years of age</label>
+            </div>
+            <div class="explanation muted" hidden>HepB is recommended within 24 hours of birth to protect early, high-risk period.</div>
+          </div>
 
-    function downloadChecklist(){
-      const data = saveChecklist();
-      const blob = new Blob([
-        'Newborn Medications & Vaccinations Checklist
-',
-        '-----------------------------------------
-',
-        `Info reviewed: ${data.infoReviewed ? 'Yes' : 'No'}
-`,
-        `Questions answered: ${data.questionsAnswered ? 'Yes' : 'No'}
-`,
-        `Consent documented: ${data.consentDocumented ? 'Yes' : 'No'}
-`,
-        `HepB given: ${data.hepbGiven ? 'Yes' : 'No'} ${data.hepbDateTime? '('+data.hepbDateTime+')':''}
-`,
-        `Vitamin K given: ${data.vitkGiven ? 'Yes' : 'No'} ${data.vitkDateTime? '('+data.vitkDateTime+')':''}
-`,
-        `Erythromycin applied: ${data.eryGiven ? 'Yes' : 'No'} ${data.eryDateTime? '('+data.eryDateTime+')':''}
-`,
-        `Notes: ${data.notes || ''}
-`
-      ], {type:'text/plain'});
-      const url = URL.createObjectURL(blob);
-      const a = document.createElement('a');
-      a.href = url; a.download = 'newborn-meds-checklist.txt';
-      document.body.appendChild(a); a.click();
-      setTimeout(()=>{ URL.revokeObjectURL(url); a.remove(); }, 0);
-    }
+          <div class="q" data-answer="c">
+            <h4>2) The main reason for giving Vitamin K to newborns is to prevent:</h4>
+            <div class="choices">
+              <label><input type="radio" name="q2" value="a"> Jaundice</label>
+              <label><input type="radio" name="q2" value="b"> Colic</label>
+              <label><input type="radio" name="q2" value="c"> Vitamin K Deficiency Bleeding (VKDB)</label>
+            </div>
+            <div class="explanation muted" hidden>Vitamin K prevents VKDB, including dangerous internal bleeding.</div>
+          </div>
 
-    loadChecklist();
-    if(saveBtn) saveBtn.addEventListener('click', saveChecklist);
-    if(dlBtn) dlBtn.addEventListener('click', downloadChecklist);
-    if(clearBtn) clearBtn.addEventListener('click', () => {
-      if(confirm('Clear saved checklist from this browser?')){
-        localStorage.removeItem(STORAGE_KEY);
-        document.querySelectorAll('[data-key]').forEach(el => {
-          if(el.type === 'checkbox') el.checked = false;
-          else if(el.type === 'datetime-local' || el.tagName === 'TEXTAREA' || el.type === 'text') el.value = '';
-        });
-        const s = document.getElementById('saveStatus'); if(s){ s.textContent = 'Cleared.'; setTimeout(()=> s.textContent = '', 2000); }
-      }
-    });
-  }
+          <div class="q" data-answer="b">
+            <h4>3) Erythromycin eye ointment is used primarily to:</h4>
+            <div class="choices">
+              <label><input type="radio" name="q3" value="a"> Improve vision</label>
+              <label><input type="radio" name="q3" value="b"> Help prevent newborn eye infections</label>
+              <label><input type="radio" name="q3" value="c"> Treat ear infections</label>
+            </div>
+            <div class="explanation muted" hidden>It’s an antibiotic ointment applied to each eye to reduce risk of infection.</div>
+          </div>
 
-  // Initialize when DOM is ready
-  document.addEventListener('DOMContentLoaded', () => {
-    initQuiz();
-    initChecklist();
-  });
-})();
+          <div class="q" data-answer="b">
+            <h4>4) Which statement about Vitamin K is <em>most accurate</em>?</h4>
+            <div class="choices">
+              <label><input type="radio" name="q4" value="a"> Oral drops are equally reliable to the injection</label>
+              <label><input type="radio" name="q4" value="b"> The injection offers dependable protection and is standard soon after birth</label>
+              <label><input type="radio" name="q4" value="c"> It’s only needed for premature babies</label>
+            </div>
+            <div class="explanation muted" hidden>The single injection shortly after birth is the most reliable way to prevent VKDB.</div>
+          </div>
+
+          <div class="q" data-answer="c">
+            <h4>5) Common minor effects after HepB vaccination can include:</h4>
+            <div class="choices">
+              <label><input type="radio" name="q5" value="a"> Hives and severe breathing problems (common)</label>
+              <label><input type="radio" name="q5" value="b"> High fever requiring hospitalization</label>
+              <label><input type="radio" name="q5" value="c"> Soreness at the injection site or mild fever</label>
+            </div>
+            <div class="explanation muted" hidden>Mild fever and localized soreness are common and short-lived; serious reactions are rare.</div>
+          </div>
+
+          <div class="q" data-answer="a">
+            <h4>6) Erythromycin eye ointment is typically applied:</h4>
+            <div class="choices">
+              <label><input type="radio" name="q6" value="a"> Once in each eye soon after birth</label>
+              <label><input type="radio" name="q6" value="b"> As a weekly treatment for 1 month</label>
+              <label><input type="radio" name="q6" value="c"> Only if the baby develops eye symptoms</label>
+            </div>
+            <div class="explanation muted" hidden>It is routinely applied once to each eye shortly after birth.</div>
+          </div>
+
+          <div>
+            <button type="submit" class="btn" id="submitQuiz">Submit quiz</button>
+            <button type="button" class="btn" id="resetQuiz" style="margin-left:8px">Reset</button>
+          </div>
+        </form>
