--- a/index.html
+++ b/index.html
@@ -211,3 +211,4 @@
             <button type="button" class="btn" id="resetQuiz" style="margin-left:8px">Reset</button>
           </div>
         </form>
+</html>
