Add footer with authorship and reference information
Added footer with educational content and references.

--- a/index.html
+++ b/index.html
@@ -306,4 +306,43 @@
 
   <script src="script.js" defer></script>
 </body>
+
+        <footer class="app-footer">
+  <div class="footer-top">
+    <div>Educational content only. Always follow guidance from your healthcare professionals.</div>
+    <div class="footer-tech">
+      Built with vanilla HTML, CSS, and JavaScript.
+      Keyboard tip: use <code class="kbd">Tab</code> to navigate and <code class="kbd">Space</code> to toggle choices.
+    </div>
+  </div>
+
+  <div class="ref-card">
+    <h3 class="ref-heading">Authorship & References</h3>
+
+    <p class="muted smalltext">
+      Patient education app created by <strong>Phuong-Anh Pham</strong>, Patricia A. Chin School of Nursing,
+      California State University, Los Angeles.
+      Educational purpose only. Not a substitute for individualized medical advice.
+    </p>
+
+    <h4 class="ref-list-heading">References</h4>
+    <ol class="ref-list">
+      <li>
+        Centers for Disease Control and Prevention. (2024). <em>Birth dose of hepatitis B vaccine: Guidelines and rationale</em>. U.S. Department of Health and Human Services.
+      </li>
+      <li>
+        American Academy of Pediatrics. (2023). <em>Vitamin K and prevention of vitamin K deficiency bleeding in newborns</em>. AAP Committee on Fetus and Newborn.
+      </li>
+      <li>
+        Centers for Disease Control and Prevention. (2024). <em>Ophthalmic prophylaxis for prevention of neonatal gonococcal ophthalmia</em>. U.S. Department of Health and Human Services.
+      </li>
+    </ol>
+
+    <p class="muted tinytext">
+      Content adapted from CDC and AAP guidance to explain common newborn preventive treatments:
+      hepatitis B vaccine, vitamin K injection, and erythromycin eye ointment.
+    </p>
+  </div>
+</footer>
+
 </html>
