Close article and section tags in index.html

--- a/index.html
+++ b/index.html
@@ -211,7 +211,9 @@
             <button type="button" class="btn" id="resetQuiz" style="margin-left:8px">Reset</button>
           </div>
         </form>
-
+      </article>
+    </section>
+    
             <!-- CHECKLIST PAGE -->
     <section id="tab-checklist" role="region" aria-labelledby="checklist" class="grid">
       <article class="card">
