Add section spacer div in index.html

--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
         </form>
       </article>
     </section>
-    
+       <div class="section-spacer"></div>
             <!-- CHECKLIST PAGE -->
     <section id="tab-checklist" role="region" aria-labelledby="checklist" class="grid">
       <article class="card">
